# BIST100-Signal-Prototype

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/bist100_signal/: backtest.py  cli.py  config.py  data_io.py  indicators.py  intraday.py  metrics.py  portfolio.py  reporting.py  runner.py  signals.py  stops.py
src/bist100_signal_prototype.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_placeholder.py
