[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bist100-signal-prototype"
version = "0.1.0"
description = "BIST100 signal prototype"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Serkan"}]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "python-dateutil>=2.8",
]

[project.scripts]
bist100 = "bist100_signal.cli:main"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
select = ["E","F","I","UP"]
ignore = ["E203", "E501", "E702"]
src = ["src"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_unused_ignores = false
check_untyped_defs = false
disallow_untyped_defs = false